# digital-legacies

./: README.md  index.html  package-lock.json  package.json
public/: splashscreen.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  crypto.rs  error.rs  main.rs  meta.rs  util.rs  vault.rs
src-tauri/src/commands/: create.rs  loadmeta.rs  open.rs  unlock.rs
src/assets/: app.scss  colours.sass  import.scss  keys.scss  progress.scss
src/pages/: welcome.tsx
src/pages/creation/: 10shareKeys.tsx  1selectType.tsx  2personalInfo.tsx  5updates.tsx  7review.tsx  8encrypting.tsx  9mainkey.tsx  VaultInfo.tsx  consent.tsx  index.tsx
src/pages/creation/import/: index.tsx  sidebar.tsx
src/pages/creation/import/FileBrowser/: Breadcrumb.tsx  FileList.tsx  index.tsx
src/pages/creation/shares/: Circle.tsx  index.tsx
src/pages/open/: SelectVault.tsx  index.tsx
src/pages/unlock/: 1chooseType.tsx  2import.tsx  3enterkeys.tsx  5access.tsx  Unlockinfo.tsx  decrypting.tsx  index.tsx  initiate.tsx
src/shared/: DropdownButton.tsx  EnterKey.tsx  Errors.tsx  Footer.tsx  Headers.tsx  InputWithButton.tsx  OpenButton.tsx  ProgressIndicator.tsx  index.tsx
src/util/: cloudApi.ts  constants.ts  fileApi.ts  index.ts  keyComments.ts
