[package]
name = "legacies-app"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "notification-all", "http-all", "fs-write-file", "fs-read-file", "process-exit", "dialog-save", "fs-exists", "path-all", "fs-remove-file", "fs-remove-dir", "fs-create-dir", "fs-read-dir", "fs-copy-file", "clipboard-write-text", "dialog-open", "dialog-confirm", "shell-open", "http-multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shamirsecretsharing = "0.1.5"
chacha20poly1305 = { version = "0.10.1" }
rmp-serde = "1.1.2"
tauri-plugin-context-menu = "0.7.0"
tar = "0.4.40"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
